--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="sheet">
       <div id="header">
         <div id="rightText">
-          <h1>Benjamin Cooper</h1>
+          <h1><span>B</span>enjamin <span>C</span>ooper</h1>
           <p>bencooper222@gmail.com</p>
           <!-- should this be something else? -->
         </div>
@@ -43,7 +43,9 @@
                 xlink:href="node_modules/@fortawesome/fontawesome-free/sprites/brands.svg#github"
               ></use>
             </svg>
-            <label>bencooper222</label>
+            <a href="https://github.com/bencooper222">
+              <label>bencooper222</label></a
+            >
           </span>
         </div>
       </div>
