xlink is bad apparently

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ben Cooper's Resume</title>
 
     <link
-      href="https://fonts.googleapis.com/css?family=Bitter|Roboto|Roboto+Slab"
+      href="https://fonts.googleapis.com/css?family=Bitter|Roboto"
       rel="stylesheet"
     />
 
@@ -32,7 +32,7 @@
           <span>
             <svg>
               <use
-                xlink:href="node_modules/@fortawesome/fontawesome-free/sprites/solid.svg#envelope"
+                href="node_modules/@fortawesome/fontawesome-free/sprites/solid.svg#envelope"
               ></use>
             </svg>
             <label>bencooper222@gmail.com</label>
@@ -40,7 +40,7 @@
           <span>
             <svg>
               <use
-                xlink:href="node_modules/@fortawesome/fontawesome-free/sprites/brands.svg#github"
+                href="node_modules/@fortawesome/fontawesome-free/sprites/brands.svg#github"
               ></use>
             </svg>
             <a href="https://github.com/bencooper222">
