--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       type="image/x-icon"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Bitter|Roboto"
+      href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto"
       rel="stylesheet"
     />
 
