got header in order and started body

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       type="image/x-icon"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto"
+      href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Raleway"
       rel="stylesheet"
     />
 
@@ -56,6 +56,21 @@
             >
           </span>
         </div>
+      </div>
+      <div class="section" id="education">
+        <h2>Education</h2>
+        <ul>
+          <li>
+            Vanderbilt University (2020) — Major in Computer Science; Minor in
+            World Politics
+          </li>
+          <li>
+            Illinois Mathematics & Science Academy (2016) — Received Diploma
+          </li>
+        </ul>
+      </div>
+      <div class="section" id="work">
+        <h2>Work Experience</h2>
       </div>
     </div>
   </body>
