start work section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       type="image/x-icon"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Raleway"
+      href="https://fonts.googleapis.com/css?family=Roboto+Slab:700,400|Open+Sans:400,700|Fira+Sans:900"
       rel="stylesheet"
     />
 
@@ -71,6 +71,14 @@
       </div>
       <div class="section" id="work">
         <h2>Work Experience</h2>
+        <div class="subsection">
+          <h3>Amazon Web Services</h3>
+          <ul>
+            <li>Worked on dependency caching for internal CI/CD system</li>
+            <li>Wrote project pitch and technical design document</li>
+            <li>Saved thousands of developer and compute hours each week</li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
