add more content

--- a/index.html
+++ b/index.html
@@ -5,22 +5,15 @@
     <meta name="viewport" content="width=device-width" />
 
     <title>Ben Cooper's Resume</title>
+    <link rel="icon" href="https://shared.benc.io/favicon-min.png" type="image/x-icon" />
     <link
-      rel="icon"
-      href="https://shared.benc.io/favicon-min.png"
-      type="image/x-icon"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Slab:700,400|Open+Sans:400,700|Fira+Sans:900"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Fira+Sans:900"
       rel="stylesheet"
     />
 
     <link rel="stylesheet" href="node_modules/paper-css/paper.css" />
     <link rel="stylesheet" href="scss/main.scss" />
-    <link
-      rel="stylesheet"
-      href="node_modules/@fortawesome/fontawesome-free/sprites/brands.svg"
-    />
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/sprites/brands.svg" />
   </head>
 
   <body class="letter">
@@ -39,9 +32,7 @@
               ></use>
             </svg>
 
-            <a href="mailto:bencooper222@gmail.com">
-              <label>bencooper222@gmail.com</label></a
-            >
+            <a href="mailto:bencooper222@gmail.com"> <label>bencooper222@gmail.com</label></a>
           </span>
 
           <span>
@@ -51,9 +42,7 @@
               ></use>
             </svg>
 
-            <a href="https://github.com/bencooper222">
-              <label>bencooper222</label></a
-            >
+            <a href="https://github.com/bencooper222"> <label>bencooper222</label></a>
           </span>
         </div>
       </div>
@@ -61,8 +50,7 @@
         <h2>Education</h2>
         <ul>
           <li>
-            Vanderbilt University (2020) — Major in Computer Science; Minor in
-            World Politics
+            Vanderbilt University (2020) — Major in Computer Science; Minor in World Politics
           </li>
           <li>
             Illinois Mathematics & Science Academy (2016) — Received Diploma
@@ -71,12 +59,47 @@
       </div>
       <div class="section" id="work">
         <h2>Work Experience</h2>
+
         <div class="subsection">
           <h3>Amazon Web Services</h3>
+          <span>Summer 2019</span>
           <ul>
             <li>Worked on dependency caching for internal CI/CD system</li>
-            <li>Wrote project pitch and technical design document</li>
+            <li>Wrote project pitch & technical design document</li>
+            <li>Implemented feature in Java & Ruby on Rails</li>
             <li>Saved thousands of developer and compute hours each week</li>
+          </ul>
+        </div>
+
+        <div class="subsection">
+          <h3>Art of Problem Solving</h3>
+          <span>Summer 2018</span>
+          <ul>
+            <li>Designed problem and solution views for students</li>
+            <li>Worked with Node, Hapi.js, React and HTML Canvas on massive codebase</li>
+            <li>Developed deep understanding of ES6 and Lodash functional programming</li>
+            <li>Fixed post-launch bugs for live users</li>
+          </ul>
+        </div>
+
+        <div class="subsection">
+          <h3>VandyHacks IV & V</h3>
+          <span>Summer 2019</span>
+          <ul>
+            <li>Organized two 500 attendee hackathons</li>
+            <li>Managed $80K budget; drove down expenses to expand number of attendees</li>
+            <li>Led 50 person organizing team across 5 committees</li>
+            <li>Expanded mini-hackathon program to spread CS culture on campus</li>
+          </ul>
+        </div>
+
+        <div class="subsection">
+          <h3>Spantree Technology Group</h3>
+          <span>Summer 2016</span>
+          <ul>
+            <li>Built Slack chatbot to help consulting company categorize billing hours</li>
+            <li>Accessed Slack messaging API with Groovy (JVM) chatbot</li>
+            <li>Developed understanding of scrum methodology</li>
           </ul>
         </div>
       </div>
