abbreviate and add more content

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           </span>
         </div>
       </div>
+
       <div class="section" id="education">
         <h2>Education</h2>
         <ul>
@@ -57,12 +58,15 @@
           </li>
         </ul>
       </div>
+
       <div class="section" id="work">
         <h2>Work Experience</h2>
 
         <div class="subsection">
-          <h3>Amazon Web Services</h3>
-          <span>Summer 2019</span>
+          <span>
+            <h3>Amazon Web Services</h3>
+            <p>Summer 2019</p>
+          </span>
           <ul>
             <li>Worked on dependency caching for internal CI/CD system</li>
             <li>Wrote project pitch & technical design document</li>
@@ -72,8 +76,10 @@
         </div>
 
         <div class="subsection">
-          <h3>Art of Problem Solving</h3>
-          <span>Summer 2018</span>
+          <span>
+            <h3>Art of Problem Solving</h3>
+            <p>Summer 2018</p>
+          </span>
           <ul>
             <li>Designed problem and solution views for students</li>
             <li>Worked with Node, Hapi.js, React and HTML Canvas on massive codebase</li>
@@ -83,8 +89,10 @@
         </div>
 
         <div class="subsection">
-          <h3>VandyHacks IV & V</h3>
-          <span>Summer 2019</span>
+          <span>
+            <h3>VandyHacks IV & V</h3>
+            <p>Summer 2019</p>
+          </span>
           <ul>
             <li>Organized two 500 attendee hackathons</li>
             <li>Managed $80K budget; drove down expenses to expand number of attendees</li>
@@ -94,12 +102,39 @@
         </div>
 
         <div class="subsection">
-          <h3>Spantree Technology Group</h3>
-          <span>Summer 2016</span>
+          <span>
+            <h3>Spantree Technology Group</h3>
+            <p>Summer 2016</p>
+          </span>
           <ul>
             <li>Built Slack chatbot to help consulting company categorize billing hours</li>
             <li>Accessed Slack messaging API with Groovy (JVM) chatbot</li>
             <li>Developed understanding of scrum methodology</li>
+          </ul>
+        </div>
+      </div>
+      <div class="section" id="Projects">
+        <h2>Projects</h2>
+
+        <div class="subsection">
+          <span>
+            <h3>Parcel Rust Hot Module Reloading (HMR)</h3>
+            <p>Feb 2019</p>
+          </span>
+          <ul>
+            <li>Contributed to open source Javascript bundler</li>
+            <li>Built no-config HMR for Rust modules</li>
+            <li>Won 2nd place at HackIllinois 2019 out of ~120 entries</li>
+          </ul>
+        </div>
+
+        <div class="subsection">
+          <span>
+            <h3>Firefox Address Bar Expression Parser</h3>
+            <p>2019</p>
+          </span>
+          <ul>
+            <li>Built and released Firefox extension to match Chrome's omnibox math</li>
           </ul>
         </div>
       </div>
