--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="node_modules/paper-css/paper.css" />
     <link rel="stylesheet" href="scss/main.scss" />
-    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/sprites/brands.svg" />
+    <!-- <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/sprites/brands.svg" /> -->
   </head>
 
   <body class="letter">
@@ -32,7 +32,9 @@
               ></use>
             </svg>
 
-            <a href="mailto:bencooper222@gmail.com"> <label>bencooper222@gmail.com</label></a>
+            <a href="mailto:bencooper222@gmail.com">
+              <label>bencooper222@gmail.com</label>
+            </a>
           </span>
 
           <span>
@@ -42,7 +44,9 @@
               ></use>
             </svg>
 
-            <a href="https://github.com/bencooper222"> <label>bencooper222</label></a>
+            <a href="https://github.com/bencooper222">
+              <label>bencooper222</label>
+            </a>
           </span>
         </div>
       </div>
