more content and lazy load fonts

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             <p>Summer 2019</p>
           </span>
           <ul>
-            <li>Worked on dependency caching for internal CI/CD system</li>
+            <li>Worked on artifact caching for internal CI system</li>
             <li>Wrote project pitch & technical design document</li>
-            <li>Implemented feature in Java & Ruby on Rails</li>
-            <li>Saved thousands of developer and compute hours each week</li>
+            <li>Implemented project in Java & Ruby</li>
+            <li>Saved thousands of developer & compute hours each week</li>
           </ul>
         </div>
 
@@ -118,17 +118,22 @@
         </div>
       </div>
       <div class="section" id="Projects">
-        <h2>Projects</h2>
+        <h2>Selected Projects</h2>
 
         <div class="subsection">
           <span>
-            <h3>Parcel Rust Hot Module Reloading (HMR)</h3>
+            <h3>HackIllinois: Parcel Rust Hot Module Reloading (HMR)</h3>
             <p>Feb 2019</p>
           </span>
           <ul>
-            <li>Contributed to open source Javascript bundler</li>
-            <li>Built no-config HMR for Rust modules</li>
-            <li>Won 2nd place at HackIllinois 2019 out of ~120 entries</li>
+            <li>Won 2<sup>nd</sup> place at HackIllinois out of ~120 entries</li>
+            <li>Built no-config HMR for Rust modules for open source Javascript bundler</li>
+            <li>
+              Visit:
+              <a href="https://devpost.com/software/wasm-hot-loading-for-parcel">
+                https://devpost.com/software/wasm-hot-loading-for-parcel
+              </a>
+            </li>
           </ul>
         </div>
 
@@ -139,6 +144,26 @@
           </span>
           <ul>
             <li>Built and released Firefox extension to match Chrome's omnibox math</li>
+            <li>More accurate than competing extensions for all floating point operations</li>
+            <li>
+              Visit:
+              <a href="https://addons.mozilla.org/en-US/firefox/addon/address-bar-math/"
+                >https://addons.mozilla.org/en-US/firefox/addon/address-bar-math</a
+              >
+            </li>
+          </ul>
+        </div>
+
+        <div class="subsection">
+          <span>
+            <h3>ArchHacks: Brush Brush Revolution</h3>
+            <p>2019</p>
+          </span>
+          <ul>
+            <li>
+              Awarded 1<sup>st</sup> place and Most Technically Interesting out of 100+ submissions
+            </li>
+            <li>Used computer vision to track brushing habits</li>
           </ul>
         </div>
       </div>
