--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
               ></use>
             </svg>
 
-            <a href="mailto:bencooper222@gmail.com">
-              <label>bencooper222@gmail.com</label>
-            </a>
+            <label>
+              <a href="mailto:bencooper222@gmail.com">
+                bencooper222@gmail.com
+              </a>
+            </label>
           </span>
 
           <span>
@@ -44,9 +46,11 @@
               ></use>
             </svg>
 
-            <a href="https://github.com/bencooper222">
-              <label>bencooper222</label>
-            </a>
+            <label>
+              <a href="https://github.com/bencooper222">
+                bencooper222
+              </a>
+            </label>
           </span>
         </div>
       </div>
@@ -122,7 +126,25 @@
 
         <div class="subsection">
           <span>
-            <h3>HackIllinois: Parcel Rust Hot Module Reloading (HMR)</h3>
+            <h3>Vaken</h3>
+            <p>2019</p>
+          </span>
+          <ul>
+            <li>Building open-source hackathon management platform</li>
+            <li>Deploying dev tooling to increase project velocity</li>
+            <li>Built with Typescript, GraphQL, React Hooks & other modern technologies</li>
+            <li>
+              Visit:
+              <a href="https://github.com/VandyHacks/vaken">
+                https://github.com/VandyHacks/vaken
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="subsection">
+          <span>
+            <h3>HackIllinois: Rust Hot Module Reloading (HMR)</h3>
             <p>Feb 2019</p>
           </span>
           <ul>
@@ -157,7 +179,7 @@
         <div class="subsection">
           <span>
             <h3>ArchHacks: Brush Brush Revolution</h3>
-            <p>2019</p>
+            <p>2016</p>
           </span>
           <ul>
             <li>
