add language and description tag

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf8" />
     <meta name="viewport" content="width=device-width" />
+    <meta
+      name="Description"
+      content="The resume of Ben Cooper, software engineer & varied learner."
+    />
 
     <title>Ben Cooper's Resume</title>
     <link rel="icon" href="https://shared.benc.io/favicon-min.png" type="image/x-icon" />
