Better spacing and slightly differentiated content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="The resume of Ben Cooper, software engineer & varied learner."
     />
 
-    <title>Ben Cooper's Resume</title>
+    <title>Ben Cooper's Resume (WIP)</title>
     <link rel="icon" href="https://shared.benc.io/favicon-min.png" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Fira+Sans:900"
@@ -95,8 +95,10 @@
           </span>
           <ul>
             <li>Designed problem and solution views for students</li>
-            <li>Worked with Node, Hapi.js, React and HTML Canvas on massive codebase</li>
-            <li>Developed deep understanding of ES6 and Lodash functional programming</li>
+            <li>
+              Worked with Node, Hapi.js, React, HTML Canvas & ES6 functional programming on massive
+              codebase
+            </li>
             <li>Fixed post-launch bugs for live users</li>
           </ul>
         </div>
@@ -107,7 +109,7 @@
             <p>Summer 2019</p>
           </span>
           <ul>
-            <li>Organized two 500 attendee hackathons</li>
+            <li>Organized two 500+ attendee hackathons</li>
             <li>Managed $80K budget; drove down expenses to expand number of attendees</li>
             <li>Led 50 person organizing team across 5 committees</li>
             <li>Expanded mini-hackathon program to spread CS culture on campus</li>
@@ -120,9 +122,8 @@
             <p>Summer 2016</p>
           </span>
           <ul>
-            <li>Built Slack chatbot to help consulting company categorize billing hours</li>
+            <li>Built Slack chatbot to help 10 person remote team classify billable hours</li>
             <li>Accessed Slack messaging API with Groovy (JVM) chatbot</li>
-            <li>Developed understanding of scrum methodology</li>
           </ul>
         </div>
       </div>
