better header height

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="subsection">
           <span>
             <h3>VandyHacks IV & V</h3>
-            <p>Summer 2019</p>
+            <p>2016 - Present</p>
           </span>
           <ul>
             <li>Organized two 500+ attendee hackathons</li>
@@ -138,7 +138,7 @@
           <ul>
             <li>Building open-source hackathon management platform</li>
             <li>Deploying dev tooling to increase project velocity</li>
-            <li>Built with Typescript, GraphQL, React Hooks & other modern technologies</li>
+            <li>Built with Typescript, GraphQL, React Hooks & more</li>
             <li>
               Visit:
               <a href="https://github.com/VandyHacks/vaken">
