--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   <body class="letter">
     <div class="sheet">
+      <div id="overlay"></div>
       <div id="header">
         <div id="rightText">
           <h1><span>B</span>enjamin <span>C</span>ooper</h1>
