simplify first letter selector

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="sheet">
       <div id="header">
         <div id="rightText">
-          <h1><span>B</span>enjamin <span>C</span>ooper</h1>
+          <h1>Benjamin Cooper</h1>
           <!-- should this be something else? -->
         </div>
 
