remove google fonts call

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Ben Cooper's Resume (WIP)</title>
     <link rel="icon" href="https://shared.benc.io/favicon-min.png" type="image/x-icon" />
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Fira+Sans:900|Hind:700"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Hind:700"
       rel="stylesheet"
     />
 
@@ -194,6 +194,10 @@
             <li>Used computer vision to track brushing habits</li>
           </ul>
         </div>
+      </div>
+
+      <div class="section" id="skills">
+        <h2>Skills</h2>
       </div>
     </div>
   </body>
