--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
 
       <div class="section" id="work">
-        <h2>Work Experience</h2>
+        <h2>Experience</h2>
 
         <div class="subsection">
           <span>
@@ -164,6 +164,16 @@
             </li>
           </ul>
         </div>
+        <div class="subsection">
+          <span>
+            <h3>Github Actions Contributions</h3>
+            <p>2019</p>
+          </span>
+          <ul>
+            <li>Wrote 2 Github integrations to extend repository functionaliy</li>
+            <li>Contributed to several other open source actions</li>
+          </ul>
+        </div>
 
         <div class="subsection">
           <span>
@@ -185,7 +195,7 @@
         <div class="subsection">
           <span>
             <h3>ArchHacks: Brush Brush Revolution</h3>
-            <p>2016</p>
+            <p>Nov 2016</p>
           </span>
           <ul>
             <li>
@@ -198,6 +208,11 @@
 
       <div class="section" id="skills">
         <h2>Skills</h2>
+        <ul>
+          <li><b>Languages:</b> Javascript, Typescript, Java/Groovy, Rust, C#, Python, and R</li>
+          <li><b>Technologies:</b> GraphQL, React, Vue, SQL, (S)CSS, and AWS/GCP</li>
+          <li><b>Other:</b> Public speaking, technical writing, scrum, and mentorship</li>
+        </ul>
       </div>
     </div>
   </body>
