change header link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="sheet">
       <div id="header">
         <div id="rightText">
-          <h1>Benjamin Cooper</h1>
+          <h1><a href="https://benc.io">Benjamin Cooper</a></h1>
           <!-- should this be something else? -->
         </div>
 
@@ -77,20 +77,19 @@
 
         <div class="subsection">
           <span>
-            <h3>Amazon Web Services</h3>
+            <h3 class="bold">Amazon Web Services</h3>
             <p>Summer 2019</p>
           </span>
           <ul>
-            <li>Worked on artifact caching for internal CI system</li>
+            <li>Implemented artifact caching for internal CI system in Java & Ruby</li>
             <li>Wrote project pitch & technical design document</li>
-            <li>Implemented project in Java & Ruby</li>
             <li>Saved thousands of developer & compute hours each week</li>
           </ul>
         </div>
 
         <div class="subsection">
           <span>
-            <h3>Art of Problem Solving</h3>
+            <h3 class="bold">Art of Problem Solving</h3>
             <p>Summer 2018</p>
           </span>
           <ul>
@@ -105,7 +104,7 @@
 
         <div class="subsection">
           <span>
-            <h3>VandyHacks IV & V</h3>
+            <h3 class="bold">VandyHacks IV & V</h3>
             <p>2016 - Present</p>
           </span>
           <ul>
@@ -118,7 +117,7 @@
 
         <div class="subsection">
           <span>
-            <h3>Spantree Technology Group</h3>
+            <h3 class="bold">Spantree Technology Group</h3>
             <p>Summer 2016</p>
           </span>
           <ul>
@@ -132,7 +131,7 @@
 
         <div class="subsection">
           <span>
-            <h3>Vaken</h3>
+            <h3 class="bold">Vaken</h3>
             <p>2019</p>
           </span>
           <ul>
@@ -150,7 +149,7 @@
 
         <div class="subsection">
           <span>
-            <h3>HackIllinois: Rust Hot Module Reloading (HMR)</h3>
+            <h3 class="bold">HackIllinois: Rust Hot Module Reloading (HMR)</h3>
             <p>Feb 2019</p>
           </span>
           <ul>
@@ -166,7 +165,7 @@
         </div>
         <div class="subsection">
           <span>
-            <h3>Github Actions Contributions</h3>
+            <h3 class="bold">Github Actions Contributions</h3>
             <p>2019</p>
           </span>
           <ul>
@@ -177,7 +176,7 @@
 
         <div class="subsection">
           <span>
-            <h3>Firefox Address Bar Expression Parser</h3>
+            <h3 class="bold">Firefox Address Bar Expression Parser</h3>
             <p>2019</p>
           </span>
           <ul>
@@ -194,7 +193,7 @@
 
         <div class="subsection">
           <span>
-            <h3>ArchHacks: Brush Brush Revolution</h3>
+            <h3 class="bold" class="bold">ArchHacks: Brush Brush Revolution</h3>
             <p>Nov 2016</p>
           </span>
           <ul>
@@ -209,9 +208,17 @@
       <div class="section" id="skills">
         <h2>Skills</h2>
         <ul>
-          <li><b>Languages:</b> Javascript, Typescript, Java/Groovy, Rust, C#, Python, and R</li>
-          <li><b>Technologies:</b> GraphQL, React, Vue, SQL, (S)CSS, and AWS/GCP</li>
-          <li><b>Other:</b> Public speaking, technical writing, scrum, and mentorship</li>
+          <li>
+            <span class="bold">Languages:</span> Javascript, Typescript, Java/Groovy, Rust, C#,
+            Python, and R
+          </li>
+          <li>
+            <span class="bold">Technologies:</span> GraphQL, React, Vue, SQL, (S)CSS, and AWS/GCP
+          </li>
+          <li>
+            <span class="bold">Other:</span> Public speaking, technical writing, scrum, and
+            mentorship
+          </li>
         </ul>
       </div>
     </div>
