--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="The resume of Ben Cooper, software engineer & varied learner."
     />
 
-    <title>Ben Cooper's Resume (WIP)</title>
+    <title>Ben Cooper's Resume</title>
     <link rel="icon" href="https://shared.benc.io/favicon-min.png" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Hind:700"
@@ -165,7 +165,7 @@
         </div>
         <div class="subsection">
           <span>
-            <h3 class="bold">Github Actions Contributions</h3>
+            <h3 class="bold">Github Actions Open Source Contributions</h3>
             <p>2019</p>
           </span>
           <ul>
