add image to bundling flow

--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="utf8" />
     <meta name="viewport" content="width=device-width" />
-    <meta
-      name="Description"
-      content="The resume of Ben Cooper, software engineer & varied learner."
-    />
+    <meta name="Description" content="The resume of Ben Cooper, software engineer." />
 
     <title>Ben Cooper's Resume</title>
     <link rel="icon" href="https://shared.benc.io/favicon-min.png" type="image/x-icon" />
