add og:image prop

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="Description" content="The resume of Ben Cooper, software engineer." />
-
+    <meta name="og:image" content="./og.png" />
     <title>Ben Cooper's Resume</title>
     <link rel="icon" href="https://shared.benc.io/favicon-min.png" type="image/x-icon" />
     <link
