--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
 
         <div class="subsection">
           <span>
-            <h3 class="bold">Amazon Web Services</h3>
+            <h3 class="bold">
+              Amazon Web Services | <span class="nobold">Software Engineering Intern</span>
+            </h3>
             <p>Summer 2019</p>
           </span>
           <ul>
@@ -87,7 +89,9 @@
 
         <div class="subsection">
           <span>
-            <h3 class="bold">Art of Problem Solving</h3>
+            <h3 class="bold">
+              Art of Problem Solving | <span class="nobold">Software Engineering Intern</span>
+            </h3>
             <p>Summer 2018</p>
           </span>
           <ul>
@@ -102,12 +106,14 @@
 
         <div class="subsection">
           <span>
-            <h3 class="bold">VandyHacks IV & V</h3>
+            <h3 class="bold">
+              VandyHacks IV & V | <span class="nobold">President, Director & Mentor</span>
+            </h3>
             <p>2016 - Present</p>
           </span>
           <ul>
             <li>Organized two 500+ attendee hackathons</li>
-            <li>Managed $80K budget; drove down expenses to expand number of attendees</li>
+            <li>Managed $80K budget; drove down expenses to expand number of attendees by ~20%</li>
             <li>Led 50 person organizing team across 5 committees</li>
             <li>Expanded mini-hackathon program to spread CS culture on campus</li>
           </ul>
@@ -115,7 +121,9 @@
 
         <div class="subsection">
           <span>
-            <h3 class="bold">Spantree Technology Group</h3>
+            <h3 class="bold">
+              Spantree Technology Group | <span class="nobold">Software Engineering Intern</span>
+            </h3>
             <p>Summer 2016</p>
           </span>
           <ul>
