--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
           <ul>
             <li>Designed problem and solution views for students</li>
             <li>
-              Worked with Node, Hapi.js, React, HTML Canvas & ES6 functional programming on massive
-              codebase
+              Worked with Node, Hapi.js, React, HTML Canvas, and ES2018 on massive codebase
             </li>
             <li>Fixed post-launch bugs for live users</li>
           </ul>
@@ -143,7 +142,7 @@
           <ul>
             <li>Building open-source hackathon management platform</li>
             <li>Deploying dev tooling to increase project velocity</li>
-            <li>Built with Typescript, GraphQL, React Hooks & more</li>
+            <li>Built with Typescript, GraphQL, and React Hooks</li>
             <li>
               Visit:
               <a href="https://github.com/VandyHacks/vaken">
@@ -206,7 +205,7 @@
             <li>
               Awarded 1<sup>st</sup> place and Most Technically Interesting out of 100+ submissions
             </li>
-            <li>Used computer vision to track brushing habits</li>
+            <li>Used computer vision to track & analyze brushing habits</li>
           </ul>
         </div>
       </div>
@@ -215,8 +214,8 @@
         <h2>Skills</h2>
         <ul>
           <li>
-            <span class="bold">Languages:</span> Javascript, Typescript, Java/Groovy, Rust, C#,
-            Python, and R
+            <span class="bold">Languages:</span> Javascript, Typescript, Java/Groovy, Rust, Python,
+            and R
           </li>
           <li>
             <span class="bold">Technologies:</span> GraphQL, React, Vue, SQL, (S)CSS, and AWS/GCP
