update omnibox bullet points

--- a/index.html
+++ b/index.html
@@ -185,8 +185,10 @@
             <p>2019</p>
           </span>
           <ul>
-            <li>Built and released Firefox extension to match Chrome's omnibox math</li>
-            <li>More accurate than competing extensions for all floating point operations</li>
+            <li>
+              Built and released Firefox extension to match Chrome's omnibox's calculator
+            </li>
+            <li>More accurate than competing extensions for floating point operations</li>
             <li>
               Visit:
               <a href="https://addons.mozilla.org/en-US/firefox/addon/address-bar-math/"
