Add Azure to services list

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="sheet">
       <div id="header">
         <div id="rightText">
-          <h1><a href="https://benc.io">Benjamin Cooper</a></h1>
+          <h1><a target="_blank" href="https://benc.io">Benjamin Cooper</a></h1>
           <!-- should this be something else? -->
         </div>
 
@@ -220,7 +220,8 @@
             and R
           </li>
           <li>
-            <span class="bold">Technologies:</span> GraphQL, React, Vue, SQL, (S)CSS, and AWS/GCP
+            <span class="bold">Technologies:</span> GraphQL, React, Vue, SQL, (S)CSS, and
+            AWS/Azure/GCP
           </li>
           <li>
             <span class="bold">Other:</span> Public speaking, technical writing, scrum, and
