--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
 
     <title>Ben Cooper's Resume</title>
     <link rel="icon" href="https://shared.benc.io/favicon-min.png" type="image/x-icon" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Hind:700"
-      rel="stylesheet"
-    />
 
+    <link rel="stylesheet" href="styles/fonts.css" />
     <link rel="stylesheet" href="node_modules/paper-css/paper.css" />
-    <link rel="stylesheet" href="scss/main.scss" />
-    <!-- <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/sprites/brands.svg" /> -->
+    <link rel="stylesheet" href="styles/main.scss" />
   </head>
 
   <body class="letter">
