--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="sheet">
       <div id="header">
         <div id="rightText">
-          <h1><a target="_blank" href="https://benc.io">Benjamin Cooper</a></h1>
+          <h1><a target="_blank" rel="noopener" href="https://benc.io">Benjamin Cooper</a></h1>
           <!-- should this be something else? -->
         </div>
 
@@ -50,7 +50,7 @@
             </svg>
 
             <p>
-              <a href="https://github.com/bencooper222">
+              <a target="_blank" rel="noopener" href="https://github.com/bencooper222">
                 bencooper222
               </a>
             </p>
@@ -145,7 +145,7 @@
             <li>Built with Typescript, GraphQL, and React Hooks</li>
             <li>
               Visit:
-              <a href="https://github.com/VandyHacks/vaken">
+              <a target="_blank" rel="noopener" href="https://github.com/VandyHacks/vaken">
                 https://github.com/VandyHacks/vaken
               </a>
             </li>
@@ -162,7 +162,11 @@
             <li>Built no-config HMR for Rust modules for open source Javascript bundler</li>
             <li>
               Visit:
-              <a href="https://devpost.com/software/wasm-hot-loading-for-parcel">
+              <a
+                target="_blank"
+                rel="noopener"
+                href="https://devpost.com/software/wasm-hot-loading-for-parcel"
+              >
                 https://devpost.com/software/wasm-hot-loading-for-parcel
               </a>
             </li>
@@ -191,7 +195,10 @@
             <li>More accurate than competing extensions for floating point operations</li>
             <li>
               Visit:
-              <a href="https://addons.mozilla.org/en-US/firefox/addon/address-bar-math/"
+              <a
+                target="_blank"
+                rel="noopener"
+                href="https://addons.mozilla.org/en-US/firefox/addon/address-bar-math/"
                 >https://addons.mozilla.org/en-US/firefox/addon/address-bar-math</a
               >
             </li>
