--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="subsection">
           <span>
             <h3 class="bold">
-              Amazon Web Services | <span class="nobold">Software Engineering Intern</span>
+              Amazon Web Services | <span class="nobold">Software Development Intern</span>
             </h3>
             <p>Summer 2019</p>
           </span>
