switch to local instant.page

--- a/index.html
+++ b/index.html
@@ -233,11 +233,6 @@
         </ul>
       </div>
     </div>
-    <script
-      src="//instant.page/2.0.1"
-      type="module"
-      defer
-      integrity="sha384-4Duao6N1ACKAViTLji8I/8e8H5Po/i/04h4rS5f9fQD6bXBBZhqv5am3/Bf/xalr"
-    ></script>
+    <script src="node_modules/instant.page/instantpage.js" type="module" defer></script>
   </body>
 </html>
