Add incoming Convoy to experience

--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
 
         <div class="subsection">
           <span>
+            <h3 class="bold">Convoy | <span class="nobold">Incoming Software Engineer</span></h3>
+            <p>Starting Summer 2020</p>
+          </span>
+        </div>
+        <br />
+        <div class="subsection">
+          <span>
             <h3 class="bold">
               Amazon Web Services | <span class="nobold">Software Development Intern</span>
             </h3>
@@ -122,8 +129,10 @@
             <p>Summer 2016</p>
           </span>
           <ul>
-            <li>Built Slack chatbot to help 10 person remote team classify billable hours</li>
-            <li>Accessed Slack messaging API with Groovy (JVM) chatbot</li>
+            <li>
+              Built Slack chatbot in Groovy (JVM) to help 10 person remote team classify billable
+              hours
+            </li>
           </ul>
         </div>
       </div>
