--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             and R
           </li>
           <li>
-            <span class="bold">Technologies:</span> GraphQL, React, Vue, SQL, (S)CSS, and
+            <span class="bold">Technologies:</span> GraphQL, React, Vue, SvelteJS, SQL, (S)CSS, and
             AWS/Azure/GCP
           </li>
           <li>
