change convoy to present and change vh to past

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h2>Education</h2>
         <ul>
           <li>
-            Vanderbilt University (2020) — Major in Computer Science; Minor in World Politics
+            Vanderbilt University (2020) — B.S. in Computer Science; Minor in World Politics
           </li>
           <li>
             Illinois Mathematics & Science Academy (2016) — Received Diploma
@@ -71,8 +71,10 @@
 
         <div class="subsection">
           <span>
-            <h3 class="bold">Convoy | <span class="nobold">Incoming Software Engineer</span></h3>
-            <p>Starting Summer 2020</p>
+            <h3 class="bold">
+              Convoy | <span class="nobold">Software Engineer on Platform Tools</span>
+            </h3>
+            <p>June 2020 - Present</p>
           </span>
         </div>
         <br />
@@ -111,7 +113,7 @@
             <h3 class="bold">
               VandyHacks IV & V | <span class="nobold">President, Director & Mentor</span>
             </h3>
-            <p>2016 - Present</p>
+            <p>2016 - 2020</p>
           </span>
           <ul>
             <li>Organized two 500+ attendee hackathons</li>
