--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </svg>
 
             <p>
-              <a href="mailto:benc@hey.com">
-                benc@hey.com
+              <a href="mailto:bencooper222@gmail.com">
+                bencooper222@gmail.com
               </a>
             </p>
           </span>
