--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="Description" content="The resume of Ben Cooper, software engineer." />
-    <meta property="og:image" content="./static/og.png" />
 
     <title>Ben Cooper's Resume</title>
     <link rel="icon" href="https://shared.benc.io/favicon-min.png" type="image/x-icon" />
@@ -12,6 +11,16 @@
     <link rel="stylesheet" href="styles/fonts.css" />
     <link rel="stylesheet" href="node_modules/paper-css/paper.css" />
     <link rel="stylesheet" href="styles/main.scss" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://resume.benc.io" />
+    <meta property="og:title" content="Ben Cooper's Resume" />
+    <meta property="og:description" content="The resume of Ben Cooper, software engineer." />
+    <meta property="og:site_name" content="benc.io" />
+
+    <meta name="twitter:domain" value="resume.benc.io" />
+    <meta name="twitter:description" value="The resume of Ben Cooper, software engineer." />
+    <meta name="twitter:url" value="http://www.resume.benc.io">
   </head>
 
   <body class="letter">
