slightly different name

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <meta name="twitter:domain" value="resume.benc.io" />
     <meta name="twitter:description" value="The resume of Ben Cooper, software engineer." />
-    <meta name="twitter:url" value="http://www.resume.benc.io">
+    <meta name="twitter:url" value="http://www.resume.benc.io" />
   </head>
 
   <body class="letter">
@@ -81,10 +81,15 @@
         <div class="subsection">
           <span>
             <h3 class="bold">
-              Convoy | <span class="nobold">Software Engineer on Platform Tools</span>
+              Convoy | <span class="nobold">Software Engineer on Platform & Test</span>
             </h3>
             <p>June 2020 - Present</p>
           </span>
+          <ul>
+            <li>Implemented artifact caching for internal CI system in Java & Ruby</li>
+            <li>Wrote project pitch & technical design document</li>
+            <li>Saved thousands of developer & compute hours each week</li>
+          </ul>
         </div>
         <br />
         <div class="subsection">
