--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </div>
       </div>
       <div class="section" id="Projects">
-        <h2>Selected Projects</h2>
+        <h2>Selected (Personal) Projects</h2>
 
         <div class="subsection">
           <span>
