--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <meta name="twitter:domain" value="resume.benc.io" />
     <meta name="twitter:description" value="The resume of Ben Cooper, software engineer." />
-    <meta name="twitter:url" value="http://www.resume.benc.io">
+    <meta name="twitter:url" value="http://www.resume.benc.io" />
   </head>
 
   <body class="letter">
@@ -81,7 +81,7 @@
         <div class="subsection">
           <span>
             <h3 class="bold">
-              Convoy | <span class="nobold">Software Engineer on Platform Tools</span>
+              Convoy | <span class="nobold">Software Engineer on Platform & Test</span>
             </h3>
             <p>June 2020 - Present</p>
           </span>
@@ -148,7 +148,7 @@
         </div>
       </div>
       <div class="section" id="Projects">
-        <h2>Selected Projects</h2>
+        <h2>Selected (Personal) Projects</h2>
 
         <div class="subsection">
           <span>
